--- a/src/components/casestudy/Hero/Casestudyhero.module.css
+++ b/src/components/casestudy/Hero/Casestudyhero.module.css
@@ -62,6 +62,7 @@
     display: flex;
     align-items: flex-end;
     transform: translateX(35px);
+    right: 10%;
 }
 
 .cat {
@@ -79,10 +80,6 @@
     .catDiv {
         transform: translateX(50px);
     }
-
-    .cat {
-        height: 250px;
-    }
 }
 
 @media (max-height: 700px) and (min-height: 600px) {
@@ -95,9 +92,6 @@
         transform: translateX(40px);
     }
 
-    .cat {
-        height: 300px;
-    }
 }
 
 @media screen and (min-width: 600px) {
@@ -151,6 +145,7 @@
 
     .catDiv {
         transform: translateX(20px);
+        right: 0;
     }
 
     .cat {
@@ -161,5 +156,9 @@
 @media screen and (min-width: 1200px) {
     .txt {
         margin-top: 10%;
+    }
+
+    .catDiv {
+        right: 19%;
     }
 }
